PYIC-7135 Separated report building to separate table scan step.